--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 	<!-- https://mvnrepository.com/artifact/com.mysql/mysql-connector-j -->
 <dependency>
     <groupId>com.mysql</groupId>
-    <artifactId>mysql-connector-j</artifactId>
+    <artifactId>mysql-connecto`r-j</artifactId>
     <version>8.0.33</version>
 </dependency>
         <dependency>
